--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,8 @@
 }
 
 .product-list {
+  display:flex;
+  flex-wrap: wrap;
   width: 60%;
 }
 
@@ -12,14 +14,22 @@
 }
 
 .product-list span {
-  display: inline-block;
+  display: inline-flexbox;
   margin-right: 10px;
 }
 
 .add-to-cart {
   padding: 5px 10px;
   background-color: #4caf50;
-  color: #fff;
+  color: #ffffff;
+  border: none;
+  cursor: pointer;
+}
+
+.clear-cart-button {
+  padding: 5px 10px;
+  background-color: #000000;
+  color: #ffffff;
   border: none;
   cursor: pointer;
 }
@@ -32,7 +42,8 @@
 .cart {
   width: 35%;
   padding: 10px;
-  background-color: #e6814f;
+  background-color: #e48303;
+  margin-bottom: 10px;
 }
 
 .cart h2 {
@@ -53,3 +64,52 @@
 .cart-total {
   font-weight: bolder;
 }
+
+.flip-card {
+  background-color: transparent;
+  width: 300px;
+  height: 200px;
+  border: 1px solid #f1f1f1;
+  perspective: 1000px;
+}
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.card-image {
+  width: 20 px;
+}
+
+.flip-card-front, .flip-card-back {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  align-items: center;
+  place-content: center;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.flip-card-front {
+  background-color: #bbb;
+  color: black;
+}
+
+.flip-card-back {
+  background-color: dodgerblue;
+  color: white;
+  transform: rotateY(180deg);
+}
+
